--- a/votting-react/package.json
+++ b/votting-react/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create-react-app": "^1.5.2",
+    "ethereumjs-wallet": "^0.6.0",
+    "ganache-cli": "^6.1.8",
+    "mocha": "^5.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
+    "solc": "^0.4.24",
+    "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.29"
   },
   "scripts": {
